Fix 3 bugs identified in PE-D
Bugs fixed:
1. MouseUX menus not changed to light them.
Fixed by: adding light theme for AddProfileWindow and AddTagWindow, some refactors are also done mainly on the fxml files, as well as change in styles.
2. Light theme input hard to see.
Fixed by: changing the command input color in light theme to black.
3. Numeric tags can't be differentiated from count number beside.
Fixed by: changing the style of count.

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -326,6 +326,7 @@
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
+    -fx-prompt-text-fill: white
 }
 
 #searchTextField {
@@ -430,18 +431,17 @@
 }
 
 .tag-list-count {
-    -fx-text-fill: white;
-    -fx-background-color: #3e7b91;
     -fx-padding: 0 2 0 2;
     -fx-border-radius: 2;
+    -fx-background-color: white;
     -fx-background-radius: 2;
-    -fx-border-color: #3e7b91;
-    -fx-font-weight: bold;
-    -fx-font-size: 13;
+    -fx-border-color: white;
 }
 
 #personInTagCount {
-    -fx-text-fill: white;
+    -fx-text-fill: #3e7b91;
+    -fx-font-weight: bold;
+    -fx-font-size: 13;
 }
 
 #grabResult {
